Fix share card centering for generated image

--- a/results.html
+++ b/results.html
@@ -1064,12 +1064,12 @@
                 // Move the share card into the viewport with full opacity so mobile browsers render it for capture.
                 shareCardElement.style.visibility = 'visible';
                 shareCardElement.style.position = 'fixed';
-                shareCardElement.style.left = '50%';
+                shareCardElement.style.left = '0';
                 shareCardElement.style.top = '16px';
-                shareCardElement.style.right = 'auto';
+                shareCardElement.style.right = '0';
                 shareCardElement.style.bottom = 'auto';
-                shareCardElement.style.margin = '0';
-                shareCardElement.style.transform = 'translateX(-50%)';
+                shareCardElement.style.margin = '0 auto';
+                shareCardElement.style.transform = 'none';
                 shareCardElement.style.pointerEvents = 'none';
                 shareCardElement.style.zIndex = '-1';
                 shareCardElement.style.opacity = '1';
